<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/popularCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/me_darker_orange">

            <ImageView
                android:id="@+id/popularCardImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/this_is_movie_poster"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <com.smartfrenl.moviencyclopedia.fonts.SectionTitleTextView
                    android:id="@+id/popularCardMovieName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_name"
                    android:textColor="@color/me_orange"/>

                <com.smartfrenl.moviencyclopedia.fonts.ToolbarSubtitleTextView
                    android:id="@+id/popularCardReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textSize="12sp"
                    android:textColor="@color/me_dark_orange"/>
            </LinearLayout>

        </LinearLayout>






    </android.support.v7.widget.CardView>

</LinearLayout>